# gdpr_agent

./: .gitignore  dockerfile  main.py  pyproject.toml  requirements.txt
src/api/: sample.py
src/graph/: graph_build.py  graph_build_test.ipynb
src/llm/: graph_llm.py  graph_llm_notebook.ipynb
src/nodes/: chat_nodes.py  chat_nodes_test.ipynb
src/state/: state_llm.py
src/tools/: index_search.py  pinecone.ipynb  pinecone2.ipynb
