[project]
name = "gdpr-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.12.0",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "langchain-groq>=0.3.7",
    "langchain-openai>=0.3.32",
    "langgraph>=0.6.6",
    "numpy>=2.3.2",
    "openai>=1.102.0",
    "pinecone>=7.3.0",
    "pinecone-client[grpc]>=6.0.0",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.49.0",
    "tavily-python>=0.7.11",
    "tiktoken>=0.11.0",
    "uvicorn>=0.35.0",
]
